--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       </section>
 
       <section class="places">
-        <div class="place">
+        <article class="place">
           <h2 class="place__title">Куршская коса</h2>
           <div class="place__website">
             <p class="place__url-heading">URL</p>
@@ -75,15 +75,14 @@
               Уникальная природная зона на краю российского анклава.
             </p>
             <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и
-              исследователя
-              там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи
+              исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи
               небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах
               стального, прохладного моря.
             </p>
           </div>
-        </div>
+        </article>
 
-        <div class="place">
+        <article class="place">
           <h2 class="place__title">Кольский</h2>
           <div class="place__website">
             <p class="place__url-heading">URL</p>
@@ -102,9 +101,9 @@
               в Мурманск.
             </p>
           </div>
-        </div>
+        </article>
 
-        <div class="place">
+        <article class="place">
           <h2 class="place__title">Алтай</h2>
           <div class="place__website">
             <p class="place__url-heading">URL</p>
@@ -115,20 +114,17 @@
           <div class="place__paragraphs">
             <p class="place__paragraph">Алтай — одно из красивейших мест в России.
               В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и
-              озёра.
-              А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным
+              озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным
               воздухом.
             </p>
             <p class="place__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите
-              всё
-              разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах
-              пасутся
-              косули. И знаменитые манулы — тоже обитатели Алтайского края.
+              всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах
+              пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.
             </p>
           </div>
-        </div>
+        </article>
 
-        <div class="place">
+        <article class="place">
           <h2 class="place__title">Зимний Байкал</h2>
           <div class="place__website">
             <p class="place__url-heading">URL</p>
@@ -147,9 +143,9 @@
               «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.
             </p>
           </div>
-        </div>
+        </article>
 
-        <div class="place">
+        <article class="place">
           <h2 class="place__title">Карелия</h2>
           <div class="place__website">
             <p class="place__url-heading">URL</p>
@@ -165,12 +161,12 @@
               в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.
             </p>
           </div>
-        </div>
+        </article>
       </section>
 
       <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="cover">
         <img class="cover__background" alt="Много вагонов на сортировочной станции" src="./images/cover-trains.jpg">
-        <h2 class="cover__title">До Байкала «на собаках»</h2>
+        <h2 class="cover__title">До Байкала «на&nbspсобаках»</h2>
         <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
           электричках.
         </p>
@@ -179,11 +175,13 @@
 
     <footer class="footer">
       <nav class="footer__nav">
-        <a href="https://yandex.ru/maps" target="_blank" class="footer__link">Карты</a>
-        <a href="https://yandex.ru/pogoda" target="_blank" class="footer__link">Погода</a>
-        <a href="https://rasp.yandex.ru" target="_blank" class="footer__link">Расписание</a>
-        <a href="https://calendar.yandex.ru" target="_blank" class="footer__link">Календарь</a>
-        <a href="https://travel.yandex.ru" target="_blank" class="footer__link">Путешествия</a>
+        <ul class="footer__list">
+          <li class="footer__list-item"><a href="https://yandex.ru/maps" target="_blank" class="footer__link">Карты</a></li>
+          <li class="footer__list-item"><a href="https://yandex.ru/pogoda" target="_blank" class="footer__link">Погода</a></li>
+          <li class="footer__list-item"><a href="https://rasp.yandex.ru" target="_blank" class="footer__link">Расписание</a></li>
+          <li class="footer__list-item"><a href="https://calendar.yandex.ru" target="_blank" class="footer__link">Календарь</a></li>
+          <li class="footer__list-item"><a href="https://travel.yandex.ru" target="_blank" class="footer__link">Путешествия</a></li>
+        </ul>
       </nav>
       <p class="footer__copyright">© 2022. Александр Новоселов</p>
     </footer>
