--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
       <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="cover">
         <img class="cover__background" alt="Много вагонов на сортировочной станции" src="./images/cover-trains.jpg">
-        <h2 class="cover__title">До Байкала «на&nbspсобаках»</h2>
+        <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
         <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
           электричках.
         </p>
