Удалил ссылки на запрещенный сайт

--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
           <h2 class="place__title">Алтай</h2>
           <div class="place__website">
             <p class="place__url-heading">URL</p>
-            <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank"
-              class="place__link">Facebook</a>
+            <a href="#" target="_blank"
+              class="place__link">Здесь была ссылка на сайт запрещенной ныне в России организации ((</a>
           </div>
           <img class="place__image" src="./images/place-altai.jpg" alt="Зеленый лес Алтая">
           <div class="place__paragraphs">
